--- a/docs/197254.md
+++ b/docs/197254.md
@@ -361,7 +361,7 @@ public class XmlConfigParserFactory implements IConfigParserFactory {
 
 ```
 
-## 重点回顾
+## 重点回顾
 
 好了，今天的内容到此就讲完了。我们来一块总结回顾一下，你需要重点掌握的内容。
 
@@ -379,7 +379,7 @@ public class XmlConfigParserFactory implements IConfigParserFactory {
 现在，我们上升一个思维层面来看工厂模式，它的作用无外乎下面这四个。这也是判断要不要使用工厂模式的最本质的参考标准。
 
 *   封装变化：创建逻辑有可能变化，封装成工厂类之后，创建逻辑的变更对调用者透明。
-*   代码复用：创建代码抽离到独立的工厂类之后可以复用。
+*   代码复用：创建代码抽离到独立的工厂类之后可以复用。
 *   隔离复杂性：封装复杂的创建逻辑，调用者无需了解如何创建对象。
 *   控制复杂度：将创建代码抽离出来，让原本的函数或类职责更单一，代码更简洁。
 
