--- a/docs/240971.md
+++ b/docs/240971.md
@@ -527,7 +527,7 @@ public class LruCache implements Cache {
 前面我们讲到，迭代器模式常用来替代for循环遍历集合元素。Mybatis的PropertyTokenizer类实现了Java Iterator接口，是一个迭代器，用来对配置属性进行解析。具体的代码如下所示：
 
 ```
-// person[0].birthdate.year 会被分解为3个PropertyTokenizer对象。其中，第一个PropertyTokenizer对象的各个属性值如注释所示。
+// person[0].birthdate.year 会被分解为3个PropertyTokenizer对象。其中，第一个PropertyTokenizer对象的各个属性值如注释所示。
 public class PropertyTokenizer implements Iterator<PropertyTokenizer> {
   private String name; // person
   private final String indexedName; // person[0]
@@ -589,7 +589,7 @@ public class PropertyTokenizer implements Iterator<PropertyTokenizer> {
 
 ## Log：如何使用适配器模式来适配不同的日志框架？
 
-在适配器模式那节课中我们讲过，Slf4j框架为了统一各个不同的日志框架（Log4j、JCL、Logback等），提供了一套统一的日志接口。不过，MyBatis并没有直接使用Slf4j提供的统一日志规范，而是自己又重复造轮子，定义了一套自己的日志访问接口。
+在适配器模式那节课中我们讲过，Slf4j框架为了统一各个不同的日志框架（Log4j、JCL、Logback等），提供了一套统一的日志接口。不过，MyBatis并没有直接使用Slf4j提供的统一日志规范，而是自己又重复造轮子，定义了一套自己的日志访问接口。
 
 ```
 public interface Log {
